updated pom wiht surefire and cobertura plugin.